Fixed scrollbars in feedback form

--- a/core/app/assets/stylesheets/base/feedback.css.less
+++ b/core/app/assets/stylesheets/base/feedback.css.less
@@ -17,6 +17,7 @@
 	.modal-window-body {
 		padding: 0;
     max-height: @feedback_frame_height_no_user;
+    overflow: hidden;
 
 		iframe {
 			width: @feedback_frame_width;
